# ghostfolio-agent

./: .gitignore  Dockerfile  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
evals/: dataset_sync.py  eval_cases.yaml  eval_runner.py  langsmith_evaluators.py  scorers.py
evals/results/: eval_20260224_155009.json  eval_20260224_161030.json  eval_20260224_164830.json  ghostfolio-eval-20260226-162439-9bdb6055_latest.csv
fixtures/: generate_mock_data.py  import_mock_data.py
fixtures/output/: all_accounts.json  buy_and_hold.json  crypto_max.json  price_cache.json  weekly_etf.json
scripts/: setup_eval.py
src/ghostfolio_agent/: __init__.py  auth.py  cli.py  config.py  db.py  server.py  verification.py
src/ghostfolio_agent/graph/: agent.py  nodes.py  state.py
src/ghostfolio_agent/memory/: store.py
src/ghostfolio_agent/schemas/: requests.py  responses.py
src/ghostfolio_agent/tools/: base.py  calculate.py  compliance_check.py  market_data.py  portfolio_analysis.py  tax_estimate.py  transaction_categorize.py
tests/: conftest.py  test_api.py  test_auth.py  test_cli.py
tests/test_graph/: test_agent.py
tests/test_tools/: test_calculate.py  test_compliance_check.py  test_market_data.py  test_portfolio_analysis.py  test_tax_estimate.py  test_transaction_categorize.py
tests/test_verification/: test_verification.py
